Stylesheet cleanup & correct functional page layout breakpoints
- Move nav/ into components/nav/
- Move _tones.scss to theme/
- Add DEPRECATED note in pages/
- Move _tier to components (slowly move styles out of pages)
- Add table of contents to style.scss and clean up imports

--- a/frontend/assets/stylesheets/layout/_layout.scss
+++ b/frontend/assets/stylesheets/layout/_layout.scss
@@ -5,40 +5,20 @@
 html {
     position: relative;
     min-height: 100%;
-    background-color: $c-background;
-
+    background: $c-background url(/assets/images/bg-texture.jpg) repeat-y center;
     background-attachment: fixed;
-    background-repeat: repeat-y;
-    background-position: center;
-    background-image: url(/assets/images/bg-texture.jpg);
     background-size: cover;
-
-    // TODO: Remove when short homepage goes live.
-    &.home-page {
-        background: url(/assets/images/backgrounds/400-Home-hero.jpg) no-repeat top center fixed;
-        @media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
-            background: url(/assets/images/backgrounds/400-Home-hero-2x.jpg) no-repeat top center fixed;
-            background-size: rem(400px) rem(444px);
-        }
-        @include mq(400px) {
-            background: url(/assets/images/backgrounds/740-Home-hero.jpg) no-repeat top center fixed;
-            background-size: auto auto;
-        }
-        @include mq(tablet) {
-            background: url(/assets/images/backgrounds/1920-Home-hero.jpg) no-repeat top center fixed;
-            background-size: auto auto;
-        }
-    }
-
 }
 
+// TODO: Remove these when brochure pages are refactored
+// This should be a component (banner image component?),
+// rather than being manually added at thr root level.
 html.about-membership {
     background: url(/assets/images/backgrounds/740-About-hero.jpg) no-repeat top center fixed;
     @include mq(tablet) {
         background: url(/assets/images/backgrounds/1920-About-hero.jpg) no-repeat top center fixed;
     }
 }
-
 html.patron-page {
     background: url(/assets/images/backgrounds/740-Patrons-hero.jpg) no-repeat top center fixed;
     @include mq(tablet) {
@@ -61,19 +41,10 @@ body {
     }
 }
 
-// TODO: Extract max-widths out into variables
-//       Extract constraining layout styles into l-constrained helper
-//
-// note: the max-widths set here
-// are duplicated in mixins.scss
-// for the side-margins function
-// please duplicate your changes
-// this alignment is too perfect
-.page-container {
+/* Layout Helpers
+   ========================================================================== */
 
-    @include clearfix;
-    position: relative;
-
+.l-constrained {
     margin: 0 auto;
 
     @include mq(tablet) {
@@ -83,6 +54,42 @@ body {
     @include mq(mem-full) {
         max-width: gs-span(14)+($gs-gutter*2);
     }
+}
+
+.l-pad-left {
+    @include mq(tablet) {
+        padding-left: rem(gs-span(1) + $gs-gutter);
+    }
+}
+
+.l-pad-right {
+    @include mq(tablet) {
+        padding-right: rem(gs-span(1) + $gs-gutter);
+    }
+}
+
+// TOOD: Code smell. This is related to generated classes from guss-layout,
+// do we really need this? If so, document usage clearly.
+.l-row__item {
+    padding-bottom: rem($gs-gutter * 2);
+}
+
+/* Containers
+   ========================================================================== */
+
+
+// TODO: Extract max-widths out into variables
+//       Extract side margins out into l-side-margins
+//
+// note: the max-widths set here
+// are duplicated in mixins.scss
+// for the side-margins function
+// please duplicate your changes
+// this alignment is too perfect
+.page-container {
+    @extend .l-constrained;
+    @include clearfix;
+    position: relative;
 }
 
 .page-content {
@@ -101,9 +108,6 @@ body {
 
 // TODO: Refactor to remove code below here
 // ========================================
-.l-row__item {
-    padding-bottom: rem($gs-gutter * 2);
-}
 
 // Two thirds section
 .section-two-thirds {
